<?php

namespace App\Service\WechatBot\RepositoryI;

use App\Service\WechatBot\User\UserInterface;

interface RepositoryInterface
{
}